<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>apiRestAssured</groupId>
  <artifactId>apiRestAssured</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>apiRestAssured</name>
  
   <properties>
    	<maven.compiler.source>1.7</maven.compiler.source>
    	<maven.compiler.target>1.7</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	
		<dependency>
		    <groupId>org.codehaus.groovy</groupId>
		    <artifactId>groovy-all</artifactId>
		    <version>3.0.2</version>
		    <type>pom</type>
		</dependency>
					
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.hamcrest</groupId>
		    <artifactId>hamcrest-all</artifactId>
		    <version>1.3</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
      		<groupId>io.rest-assured</groupId>
      		<artifactId>rest-assured</artifactId>
      		<version>3.1.1</version>
		</dependency>
		
		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>2.41.2</version>
		</dependency>
	
		<dependency> 
			<groupId>org.testng</groupId>
		 	<artifactId>testng</artifactId> 
			<version>7.1.0</version>
		</dependency>
		
				
		
		<dependency>
			<groupId>com.vimalselvam</groupId>
			<artifactId>cucumber-extentsreport</artifactId>
			<version>3.0.2</version>
		</dependency>
		
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>
	
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.1</version>
		</dependency>
		
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.3</version>
		</dependency>
		
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>
		
		<dependency>
		    <groupId>io.cucumber</groupId>
		    <artifactId>cucumber-testng</artifactId>
		    <version>5.5.0</version>
		</dependency>

		<dependency>
		    <groupId>io.cucumber</groupId>
		    <artifactId>cucumber-java</artifactId>
		    <version>5.6.0</version>
		</dependency>	
			
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.1.2</version>
		</dependency>
		
		<dependency>
   		 <groupId>org.apache.maven.plugins</groupId>
   		 <artifactId>maven-checkstyle-plugin</artifactId>
   		 <version>3.1.1</version>
		</dependency>
				
		<dependency>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.8.1</version>
		</dependency>
				
	</dependencies>		
	
	<build>
		<pluginManagement>
			<plugins>
			
				<plugin>
	    			<artifactId>maven-surefire-plugin</artifactId>
	    			<configuration>
	        			<argLine>--enable-preview</argLine>
	        			<forkCount>3</forkCount>
      					<reuseForks>true</reuseForks>
        				<argLine>-Xmx1024m </argLine>
	    			</configuration>
				</plugin>
							
				<plugin>
					<groupId>com.trivago.rta</groupId>
					<artifactId>cluecumber-report-plugin</artifactId>
					<version>1.8.0</version>
					<executions>
						<execution>
							<id>report</id>
							<phase>post-integration-test</phase>
							<goals>
								<goal>reporting</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
					 <customStatusColorPassed>#017FAF</customStatusColorPassed>
                    <customStatusColorFailed>#C94A38</customStatusColorFailed> 
                    <customStatusColorSkipped>#F48F00</customStatusColorSkipped>
						<generatedHtmlReportDirectory>${project.build.directory}/cucumber-html-report</generatedHtmlReportDirectory>
						<expandStepHooks>true</expandStepHooks>
					</configuration>	
				</plugin>
	 		</plugins>
		</pluginManagement>
	</build>	
</project>
